--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.7"
   },
